# BoxPosed

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
api/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: signature
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  core.cpp
core/src/main/java/cn/xutils/commons/: AnnotationUtils.java  ArchUtils.java  ArraySorter.java  ArrayUtils.java  BitField.java  BooleanUtils.java  CharEncoding.java  CharRange.java  CharSequenceUtils.java  CharSet.java  CharSetUtils.java  CharUtils.java  Charsets.java  ClassLoaderUtils.java  ClassPathUtils.java  ClassUtils.java  Conversion.java  DoubleRange.java  EnumUtils.java  Functions.java  IntegerRange.java  JavaVersion.java  LocaleUtils.java  LongRange.java  NotImplementedException.java  NumberRange.java  ObjectUtils.java  RandomStringUtils.java  RandomUtils.java  Range.java  RegExUtils.java  Streams.java  (+9 more)
core/src/main/jni/: CMakeLists.txt  core.cpp  core.h
core/src/main/jni/include/: native_util.h
core/src/main/jni/src/: config.cpp  context.cpp
core/src/main/jni/src/jni/: hook_bridge.cpp  hook_bridge.h  test_posed.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
test_plugin/: build.gradle.kts
test_plugin/src/main/: AndroidManifest.xml
test_plugin/src/main/assets/: init_entry
test_plugin/src/main/res/values/: strings.xml
(+240 files in other folders)
